--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "icon": "workflower.png",
     "width": 400,
     "height": 600,
+    "min_width": 400,    
     "show": true,
     "toolbar": false
   },
