--- a/src/package.json
+++ b/src/package.json
@@ -21,11 +21,6 @@
   "js-flags": "--harmony",
   "chromium-args": "--remote-debugging-port=22222",
   "dependencies": {
-    "better-assert": "*",
-    "coffee-script": "*",
-    "mocha": "1.20.x",
-    "node-uuid": "^1.4.1",
-    "slowjam": "0.x.x",
-    "stack-trace": "*"
+    "angelo": "*"
   }
 }
