--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
   "js-flags": "--harmony",
   "chromium-args": "--remote-debugging-port=22222",
   "dependencies": {
-    "angelo": "*"
+    "angelo": "*",
+    "swig": "*"
   }
 }
